--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.6</version>
+        <version>3.2.7</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
@@ -116,10 +116,7 @@
           </execution>
         </executions>
         <configuration>
-          <gpgArguments>
-            <arg>--pinentry-mode</arg>
-            <arg>loopback</arg>
-          </gpgArguments>
+          <passphraseEnvName>GPG_PASSPHRASE</passphraseEnvName>
         </configuration>
       </plugin>
     </plugins>
