--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
         </executions>
         <configuration>
           <passphraseEnvName>GPG_PASSPHRASE</passphraseEnvName>
+          <gpgArguments>
+            <arg>--pinentry-mode</arg>
+            <arg>loopback</arg>
+          </gpgArguments>
         </configuration>
       </plugin>
     </plugins>
