--- a/.github/workflows/mvn-central.yml
+++ b/.github/workflows/mvn-central.yml
@@ -34,9 +34,10 @@ jobs:
           
       - name: Build with Maven
         run: mvn clean package
-        
+                  
       - name: Publish to Maven Central
-        run: mvn clean deploy -s $GITHUB_WORKSPACE/settings.xml
+        run: mvn clean deploy --batch-mode -s $GITHUB_WORKSPACE/settings.xml
         env:
-          CENTRAL_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          CENTRAL_TOKEN: ${{ secrets.SONATYPE_TOKEN }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_TOKEN: ${{ secrets.SONATYPE_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSWORD }}
